syntax = "proto3";

package wash_bonus;

option go_package = "./grpc";

service ServerService{
  rpc InitConnection(InitRequest) returns(InitAnswer);
}

message InitRequest{
  string serviceKey = 1;
}
message InitAnswer{
  bool success = 1;
  string error = 2;
}

service SessionService{
  rpc Begin(BeginRequest) returns(BeginAnswer);
  rpc Refresh(RefreshRequest) returns(RefreshAnswer);
  rpc Confirm(ConfirmRequest) returns(ConfirmAnswer);
  rpc End(FinishRequest) returns(FinishAnswer);
}

message BeginRequest{
  string serviceKey = 1;
  string sessionID = 2;
  int64 postID = 3;
}
message BeginAnswer{
  bool success = 1;
  string error = 2;
}

message RefreshRequest{
  string serviceKey = 1;
  string sessionID = 2;
  string enteredAmount = 3;
}
message RefreshAnswer{
  bool success = 1;
  string error = 2;
  string userID = 3;
  string consumeAmount = 4;
}

message ConfirmRequest{
  string serviceKey = 1;
  string sessionID = 2;
}
message ConfirmAnswer{
  bool success = 1;
  string error = 2;
}

message FinishRequest{
  string serviceKey = 1;
  string sessionID = 2;
  string amount = 3;
}
message FinishAnswer{
  bool success = 1;
  string error = 2;
}
